--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,41 +120,11 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-/*
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between; 
-  padding: 20px;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-}
 
-header .logo a{
-    text-decoration: none;
-  font-size: 23px;
-  font-weight: bold;
-  color: white;
-}
-
-header .menu {
-  width: 30px;
-  height: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* direcionado pelo flex colum
-}
-
-header .menu-line {
-  height: 3px;
-  background-color: black;
-}
-*/
 .container {
   display: flex;
   height: calc(100vh);
+  background-color: darkgray;
 }
 
 .container .info {
@@ -215,6 +185,7 @@ header .menu-line {
   background-image: url("../images/hero.jpg");
   background-size: cover;
   background-position: center top;
+  border-bottom-left-radius: 32px;
 }
 
 footer {
